# summer-2025

cpp-projects/bouncing-ball/: BouncyBall  CMakeLists.txt  main.cpp
cpp-projects/hello/: CMakeLists.txt  main.cpp
notes/numerics/general/: integral  integral.cpp  integrate_gsl  integrate_gsl.cpp  iterative  iterative.cpp  series  series.cpp
